added missing import

--- a/.env-example
+++ b/.env-example
@@ -4,4 +4,4 @@ DJANGO_DEBUG=True
 ALLOWED_HOSTS=.localhost, .herokuapp.com
 DB_NAME=postgres
 DB_USER=postgres,
-PASSWORD=postgres
+DB_PASSWORD=postgres
