--- a/Pipfile
+++ b/Pipfile
@@ -19,6 +19,9 @@ Django = "==3.0.7"
 django-webpack-loader = "==0.7.0"
 django-cors-headers = "*"
 python-decouple = "*"
+numpy = "*"
+scipy = "*"
+bresenham = "*"
 
 [requires]
 python_version = "3.8"
