--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.6.4",
+    "plotly.js-dist": "^1.58.4",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
     "vuetify": "^2.4.0",
