--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue": "^2.6.11",
     "vue-apexcharts": "^1.6.0",
     "vue-plotly": "^1.1.0",
+    "vue-progressbar": "^0.7.5",
     "vue-router": "^3.1.6",
     "vue2-leaflet": "^2.6.0",
     "vuetify": "^2.4.0",
