--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "apexcharts": "^3.25.0",
     "axios": "^0.21.1",
+    "bulma": "^0.9.2",
     "core-js": "^3.6.4",
     "leaflet": "^1.7.1",
     "vue": "^2.6.11",
     "vue-apexcharts": "^1.6.0",
+    "vue-dashboard-vd": "^2.0.2",
     "vue-plotly": "^1.1.0",
     "vue-progressbar": "^0.7.5",
     "vue-router": "^3.1.6",
