--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^4.3.1",
     "core-js": "^3.6.4",
     "leaflet": "^1.7.1",
+    "leaflet-fullscreen": "^1.0.2",
     "register-service-worker": "^1.5.2",
     "v-tooltip": "^2.0.0-rc.33",
     "vue": "^2.6.11",
