--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-vue": "^6.2.2",
+    "mini-css-extract-plugin": "^0.9.0",
     "prettier": "^1.19.1",
     "sass": "^1.32.0",
     "sass-loader": "^10.0.0",
