--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "vue-light-bootstrap-dashboard",
-  "short_name": "vue-light-bootstrap-dashboard",
+  "name": "PX4-AUTOPILOT",
+  "short_name": "PX4-AUTOPILOT",
   "icons": [
     {
       "src": "./img/icons/android-chrome-192x192.png",
