--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "PX4-AUTOPILOT",
+  "name": "MPD",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -14,6 +14,7 @@
     "bulma": "^0.9.2",
     "core-js": "^3.6.4",
     "leaflet": "^1.7.1",
+    "leaflet-fullscreen": "^1.0.2",
     "vue": "^2.6.11",
     "vue-apexcharts": "^1.6.0",
     "vue-dashboard-vd": "^2.0.2",
