added readme for MPD

--- a/.env-example
+++ b/.env-example
@@ -3,5 +3,7 @@ DJANGO_SECRET_KEY=p^erj(w#!-r0^k*h*p1_1o*dwwufdkgyih+4@h5@2#9xge5^g^
 DJANGO_DEBUG=True
 ALLOWED_HOSTS=.localhost, .herokuapp.com
 DB_NAME=postgres
-DB_USER=postgres,
+DB_USER=postgres
 DB_PASSWORD=postgres
+DB_HOST=localhost
+DB_PORT=5432
